Exclusão do package mapper, ajuste das classes do insertdocument, adição de boas práticas aplicando clean code, ainda esta apontando erro, tentativa de correção amanhã.